@@ -73,6 +73,8 @@ Version 1.7.7
        the log dialog. (Stefan)
 - BUG: Issue #271: Crash when showing RevGraph
        on an uncommitted, added node (Stefan Fuhrmann)
+- BUG: Issue #282: "Merge all revisions" generates
+       empty log message. (Stefan)
 
 Version 1.7.6
 - BUG: Issue #209: repo browser doesn't
